# ChangeLog for sci-biology/quast
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*quast-2.2 (23 Mar 2014)

  23 Mar 2014; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> +metadata.xml,
  +quast-2.2.ebuild:
  sci-biology/quast: a skeleton for a new python-based package, need help