@@ -4,31 +4,35 @@
 
 EAPI=5
 
-inherit python
+PYTHON_COMPAT=( python2_7 )
+
+inherit python-r1
 
 DESCRIPTION="Compare quality of multiple genome assemblies to each other"
 HOMEPAGE="http://bioinf.spbau.ru/QUAST"
-SRC_URI="http://sourceforge.net/projects/quast/files/"$P".tar.gz"
+SRC_URI="http://sourceforge.net/projects/quast/files/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS=""
 IUSE=""
 
-DEPEND="dev-python/matplotlib
-		sci-biology/mummer
-		sci-biology/glimmerhmm"
-#		sci-biology/GAGE
-#		sci-biology/GeneMarkS
-#		sci-biology/MetaGeneMark"
+DEPEND="
+	dev-python/matplotlib[${PYTHON_USEDEP}]
+	sci-biology/mummer
+	sci-biology/glimmerhmm"
+#	sci-biology/GAGE
+#	sci-biology/GeneMarkS
+#	sci-biology/MetaGeneMark"
 
 # the above packages need to be created first
 
-RDEPEND="${DEPEND}
-	dev-lang/perl"
+RDEPEND="${DEPEND}"
 
 src_install(){
-	dobin quast.py metaquast.py
+	python_foreach_impl python_newscript quast.py quast
+	python_foreach_impl python_newscript metaquast.py metaquast
+
 	dodoc manual.html CHANGES
 
 	# TODO: install lib/ subdirectory contents into some PATH and PYTHON_PATH
