@@ -2,6 +2,9 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Nov 2014; Justin Lecher <jlec@gentoo.org> quast-2.2.ebuild, metadata.xml:
+  Bump to new python eclasses
+
 *quast-2.2 (23 Mar 2014)
 
   23 Mar 2014; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> +metadata.xml,
